# whys-task-be

./: .gitignore  README.md  pyproject.toml
task/: urls.py  views.py
task/migrations/: 0001_initial.py
task/models/: Attribute.py  AttributeName.py  AttributeValue.py  Catalog.py  Image.py  Product.py  ProductAttributes.py  ProductImage.py  __init__.py
task/serializers/: Attribute.py  AttributeName.py  AttributeValue.py  Catalog.py  Image.py  ImportData.py  Product.py  ProductAttributes.py  ProductImage.py  __init__.py  mixins.py
task/views/: Attribute.py  AttributeName.py  AttributeValue.py  Catalog.py  Image.py  ImportData.py  Product.py  ProductAttributes.py  ProductImage.py  __init__.py
whys/: asgi.py  settings.py  urls.py  wsgi.py
